<resources>
    <string name="app_name">GokulPOS</string>
    <string name="hint_UserName">Username</string>
    <string name="hint_UPC">UPC</string>
    <string name="hint_Name">Name</string>
    <string name="hint_Username">Username</string>
    <string name="hint_MinAge">Min. Age</string>
    <string name="hint_Size">Size</string>
    <string name="hint_Pack">Pack</string>
    <string name="hint_Tax">Tax/es</string>
    <string name="hint_Type">Type</string>
    <string name="hint_Margin">Margin</string>
    <string name="hint_Markup">Markup</string>
    <string name="hint_UnitCost">Unit Cost</string>
    <string name="hint_OnHand">On Hand</string>
    <string name="hint_UnitPrice">Unit Price</string>
    <string name="hint_ScanLicense">Scan License</string>
    <string name="hint_CategoryName">Category Name</string>
    <string name="hint_ContactName">Contact Name</string>
    <string name="hint_Address">Address</string>
    <string name="hint_City">City</string>
    <string name="hint_Country">Country</string>
    <string name="hint_Zip">Zip</string>
    <string name="hint_State">State</string>
    <string name="hint_Value">Value</string>
    <string name="hint_TaxFactor">Tax Factor</string>
    <string name="hint_UnitPriceFactor">Unit Price Factor</string>
    <string name="hint_NoOfUnit">No Of Unit</string>
    <string name="hint_BrandName">Brand Name</string>
    <string name="hint_ClassName">Class Name</string>
    <string name="hint_GroupName">Group Name</string>
    <string name="hint_Manufacturer">Manufacturer</string>
    <string name="hint_MinPrice">Min. Price</string>
    <string name="hint_MinAmount">Min. Amount</string>
    <string name="hint_MinWarnQty">Min Warn Qty</string>
    <string name="hint_SalePrice">Sale Price</string>
    <string name="hint_ItemType">Item Type</string>
    <string name="hint_MSRP">MSRP</string>
    <string name="hint_BuyDown">Buy Down</string>
    <string name="hint_BuyCase">Buy Case</string>
    <string name="hint_UnitInCase">Unit In Case</string>
    <string name="hint_UnitPriceUOM">Unit Price UOM</string>
    <string name="hint_CaseCost">Case Cost</string>
    <string name="hint_CasePrice">Case Price</string>
    <string name="hint_Search">Search</string>
    <string name="hint_SearchBy">Search by SKU/Name/UPC</string>
    <string name="hint_Password">*******</string>
    <string name="hint_ItemSku">Item SKU</string>
    <string name="hint_ItemName">Item Name</string>
    <string name="hint_RequiredQuantity">Required Quantity</string>
    <string name="hint_MinimumAmount">Minimum Amount</string>
    <string name="hint_Price">Price</string>
    <string name="hint_Cost">Cost</string>
    <string name="hint_CaseQty">Case Qty</string>
    <string name="hint_CaseUnits">Case Units</string>
    <string name="hint_LooseQty">Loose Qty</string>
    <string name="hint_TotalQty">Total Qty</string>
    <string name="hint_ReOrderLevel">Re-Order Level</string>
    <string name="hint_MobileNo">Mobile No.</string>
    <string name="hint_UOMType">UOM Type</string>
    <string name="hint_Balance">Balance</string>
    <string name="hint_Remark">Remark</string>
    <string name="hint_SKU">SKU</string>
    <string name="hint_ReOrder">Re-Order</string>
    <string name="hint_ContactNumber">Contact Number</string>
    <string name="hint_TenderDescription">Tender Description</string>
    <string name="hint_ExchangeRate">Exchange Rate</string>
    <string name="hint_ConversionRate">Conversion Rate</string>
    <string name="hint_CurrencySymbol">Currency Symbol</string>
    <string name="hint_MinPaymentAmount">Min. Payment Amount</string>
    <string name="hint_RoleName">Role Name</string>
    <string name="hint_PromotionName">Promotion Name</string>
    <string name="hint_Buy">Buy</string>
    <string name="hint_Get">Get</string>
    <string name="hint_DiscountValue">Discount Value</string>
    <string name="hint_Limit">Limit</string>
    <string name="hint_CouponCode">Coupon Code</string>
    <string name="hint_ConfirmPassword">Confirm Password</string>
    <string name="hint_Pin">PIN</string>
    <string name="hint_ConfirmPin">Confirm PIN</string>
    <string name="hint_CardNumber">Card Number</string>
    <string name="hint_SearchByPOrder">Search by Purchase Order</string>
    <string name="hint_PurchaseOrderNo">PurchaseOrder Id</string>
    <string name="hint_InvoiceId">Invoice Id</string>
    <string name="hint_VendorName">Vendor Name</string>
    <string name="button_SignIn">Sign In</string>
    <string name="button_SignUp">Sign Up</string>
    <string name="button_Add">Add</string>
    <string name="button_AddVendor">Add Vendor</string>
    <string name="button_AddAll">Add All</string>
    <string name="button_Auto">Auto</string>
    <string name="button_Save">Save</string>
    <string name="button_RemoveTax">Remove Tax</string>
    <string name="button_Confirm">Confirm</string>
    <string name="button_Reduce">Reduce</string>
    <string name="button_Fetch">Fetch</string>
    <string name="button_OrderHistory">Order History</string>
    <string name="button_Upload">Upload</string>
    <string name="button_Update">Update</string>
    <string name="button_Replace">Replace</string>
    <string name="button_Exit">Exit</string>
    <string name="button_Close">Close Out</string>
    <string name="button_Shortcut">Shortcut</string>
    <string name="button_Return">Return</string>
    <string name="button_Receipt">Receipt</string>
    <string name="button_PrintLast">Print Last</string>
    <string name="button_Hold">Hold</string>
    <string name="button_Resume">Resume</string>
    <string name="button_Remove">Remove</string>
    <string name="button_RemoveAll">Remove All</string>
    <string name="button_Tax">Tax</string>
    <string name="button_Discount">Discount</string>
    <string name="button_Delete">Delete</string>
    <string name="button_Void">Void</string>
    <string name="button_Exact">Exact</string>
    <string name="button_Next">Next</string>
    <string name="button_Custom">Custom</string>
    <string name="button_Checkout">Checkout</string>
    <string name="button_Card">Card</string>
    <string name="button_Closed">Close</string>
    <string name="button_Print">Print</string>
    <string name="button_PrintLabel">Print Label</string>
    <string name="button_AddToSale">Add to sale</string>
    <string name="button_AddSalePerson">Add Sale Person</string>
    <string name="button_Load">Load</string>
    <string name="button_EnterStock">Enter Stock</string>
    <string name="button_AddPack">Add Pack</string>
    <string name="button_WeekDays">Week Days</string>
    <string name="button_DateRange">Date Range</string>
    <string name="button_Capture">Capture</string>
    <string name="button_ViewDetails">View Details</string>
    <string name="button_Pay">Pay</string>
    <string name="lbl_Dashboard">Dashboard</string>
    <string name="lbl_CurrentQty">Current Qty</string>
    <string name="lbl_NoData">No Data</string>
    <string name="lbl_OrderNumber">Order Number</string>
    <string name="lbl_Subtotal">Subtotal</string>
    <string name="lbl_TotalCoupon">Discount</string>
    <string name="lbl_ChangeDue">Change Due</string>
    <string name="lbl_TotalQty">Total Quantity</string>
    <string name="lbl_TotalCharge">Total Charge</string>
    <string name="lbl_TenderCash">Tender Cash</string>
    <string name="lbl_TotalTender">Total Tender</string>
    <string name="lbl_SalesTax">Sales Tax (T)</string>
    <string name="lbl_CustomerName">Customer Name</string>
    <string name="lbl_Department">Department</string>
    <string name="lbl_Dept">Dept</string>
    <string name="lbl_Reports">Reports</string>
    <string name="lbl_ProductList">Product List</string>
    <string name="lbl_ScanBarcode">Scan Barcode</string>
    <string name="lbl_DepartmentCode">Department Code</string>
    <string name="lbl_CompanyName">Company Name</string>
    <string name="lbl_PersonName">Person Name</string>
    <string name="lbl_Code">Code</string>
    <string name="lbl_Products">Products</string>
    <string name="lbl_ProductDetail">Product Detail</string>
    <string name="lbl_Qty">Qty</string>
    <string name="lbl_SKU">SKU</string>
    <string name="lbl_CustomerList">Customer Info</string>
    <string name="lbl_Male">Male</string>
    <string name="lbl_Female">Female</string>
    <string name="lbl_EmployeeList">Employee Info</string>
    <string name="lbl_BirthDate">Birthdate</string>
    <string name="lbl_Address">Address</string>
    <string name="lbl_City">City</string>
    <string name="lbl_State">State</string>
    <string name="lbl_Zip">Zip</string>
    <string name="lbl_Role">Role</string>
    <string name="lbl_Rate">Rate</string>
    <string name="lbl_PhoneNumber">Phone Number</string>
    <string name="lbl_DrivingLicense">License</string>
    <string name="lbl_UserId">User ID</string>
    <string name="lbl_Gender">Gender</string>
    <string name="lbl_EmailId">Email Id</string>
    <string name="lbl_Id">Id</string>
    <string name="lbl_OrderList">Order List</string>
    <string name="lbl_Devices">Devices</string>
    <string name="lbl_AddProduct">Add Product</string>
    <string name="lbl_EditProduct">Edit Product</string>
    <string name="lbl_OrderTotal">Order Total</string>
    <string name="lbl_OrderDetails">Order Details</string>
    <string name="lbl_DeviceDetails">Device Details</string>
    <string name="lbl_Category">Category</string>
    <string name="lbl_SubCategory">Sub Category</string>
    <string name="lbl_Add">Add</string>
    <string name="lbl_Edit">Edit</string>
    <string name="lbl_TopSellingProducts">Top Selling Products</string>
    <string name="lbl_LastSevenDaysSell">Last 7 days sell</string>
    <string name="lbl_Transactions">Transactions</string>
    <string name="lbl_BestHours">Best Hour/s</string>
    <string name="lbl_CompareMath">Compare Math</string>
    <string name="lbl_PromptPrice">Prompt for price</string>
    <string name="lbl_NewsLetter">Newsletter</string>
    <string name="lbl_UserInActive">User InActive</string>
    <string name="lbl_InActive">InActive</string>
    <string name="lbl_PromptQty">Prompt for Qty.</string>
    <string name="lbl_NonPLU">Non-plu Item</string>
    <string name="lbl_Active">Active</string>
    <string name="lbl_BasicInfo">Basic Info</string>
    <string name="lbl_CostPricing">Cost &amp; Pricing</string>
    <string name="lbl_DrivingLicenseDetails">Driving License Details</string>
    <string name="lbl_UPCUpload">UPC &amp; Upload</string>
    <string name="lbl_UploadFile">Upload Your Files</string>
    <string name="lbl_FileShould">File should be Zip,Jpeg,Png</string>
    <string name="lbl_Percentage">%</string>
    <string name="lbl_Dollar">$</string>
    <string name="lbl_ManagePrice">Manage Price</string>
    <string name="lbl_Colon">:</string>
    <string name="lbl_InStoreStock">In-Store Stock</string>
    <string name="lbl_WareHouseStock">Warehouse Stock</string>
    <string name="lbl_Items">Item</string>
    <string name="lbl_Paid">Paid</string>
    <string name="lbl_TotalPayAmount">Total Pay Amount:</string>
    <string name="lbl_Password">Password</string>
    <string name="lbl_SuperAdmin">Super Admin</string>
    <string name="lbl_Adjustment">Adjustment</string>
    <string name="lbl_Loan">Loan</string>
    <string name="lbl_Drop">Drop</string>
    <string name="lbl_PaidOut">Paid Out</string>
    <string name="lbl_Admin">Admin</string>
    <string name="lbl_Employee">Employee</string>
    <string name="lbl_Okay">Okay</string>
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_Discount">Discount</string>
    <string name="lbl_Type">Type</string>
    <string name="lbl_Description">Description</string>
    <string name="lbl_Price">Price</string>
    <string name="lbl_Amount">Amount</string>
    <string name="lbl_TransactionType">Transaction Type</string>
    <string name="lbl_Reason">Reason</string>
    <string name="Menu_Tax">Tax</string>
</resources>