<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <include
                android:id="@+id/layoutToolbar"
                layout="@layout/fragment_d_toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutCounts"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regularTextSize"
                    android:background="@color/darkGrey"
                    android:elevation="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_2sdp"
                    android:visibility="gone"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/lbl_Id"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/lbl_Items"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutPrice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regularTextSize"
                    android:background="@color/darkGrey"
                    android:elevation="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:singleLine="true"
                        android:text="@string/lbl_Qty"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:singleLine="true"
                        android:text="@string/hint_UnitPrice"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:singleLine="true"
                        android:text="@string/hint_UnitCost"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regularTextSize"
                    android:background="@color/darkGrey"
                    android:elevation="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/lbl_Discount"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/lbl_Type"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical|end"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/hint_MinAmount"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_vertical|end"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/hint_Value"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleViewSpecificationList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_animation_fall_down"
                    android:scrollbars="vertical"
                    app:fastScrollEnabled="true"
                    app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                    app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />

                <LinearLayout
                    android:id="@+id/linearLayoutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regularTextSize"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonClose"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:backgroundTint="@color/red"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:text="@string/button_Closed"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonSave"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="0.3"
                        android:backgroundTint="@color/buttonReturn"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:text="@string/button_Reduce"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/commonTextSize" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
